added error handler to js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div class="container">
       <div class="card">
         <section class="nav">
-          <input type="text" placeholder="Search City" id="search-text" />
+          <input
+            type="text"
+            placeholder="Search City name"
+            id="search-text"
+            spellcheck="false"
+          />
           <button class="search-btn">
             <img
               src="./weather-app-img/images/search.png"
@@ -20,36 +25,38 @@
             />
           </button>
         </section>
-
-        <section class="main">
-          <img
-            src="./weather-app-img/images/clouds.png"
-            alt="Weather"
-            id="weather-img"
-          />
-
-          <div class="weather-info">
-            <p class="temperature"><span class="temp">22</span>°C</p>
-            <p class="city">New York</p>
-          </div>
-        </section>
-
-        <footer>
-          <div class="element">
-            <img src="./weather-app-img/images/humidity.png" alt="humidity" />
-            <div class="humidity-info">
-              <p class="humidity"><span class="humidity-value">64</span>%</p>
-              <p>Humidity</p>
+        <div class="error"><p>Invalid city name</p></div>
+        <div class="weather-body">
+          <section class="main">
+            <img
+              src="./weather-app-img/images/clouds.png"
+              alt="Weather"
+              id="weather-img"
+            />
+            <div class="weather-info">
+              <p class="temperature"><span class="temp">22</span>°C</p>
+              <p class="city">New York</p>
             </div>
-          </div>
-          <div class="element">
-            <img src="./weather-app-img/images/wind.png" alt="wind" />
-            <div class="wind-info">
-              <p class="wind"><span class="wind-speed-value">18</span> km/h</p>
-              <p>wind Speed</p>
+          </section>
+          <footer>
+            <div class="element">
+              <img src="./weather-app-img/images/humidity.png" alt="humidity" />
+              <div class="humidity-info">
+                <p class="humidity"><span class="humidity-value">64</span>%</p>
+                <p>Humidity</p>
+              </div>
             </div>
-          </div>
-        </footer>
+            <div class="element">
+              <img src="./weather-app-img/images/wind.png" alt="wind" />
+              <div class="wind-info">
+                <p class="wind">
+                  <span class="wind-speed-value">18</span> km/h
+                </p>
+                <p>wind Speed</p>
+              </div>
+            </div>
+          </footer>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
